--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
+/nbproject/
+/thinkphp/
+/vendor/
 /runtime/*
 /addons/*
 /application/admin/command/Install/*.lock
+/public/assets/libs/
 /public/assets/addons/*
 /public/uploads/*
 .idea
